# virtuals-surge-sniper

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.hermes/: redis-caching-plan.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: aggregator.py  bonding_curve.py  config.py  main.py  surge_engine.py
backend/app/api/: __init__.py  _context.py  _shared.py  routes.py  ws.py  ws_context.py
backend/app/cache/: __init__.py  redis.py
backend/app/data_aggregator/: __init__.py  acp_client.py  aggregator.py  bonding_curve.py  dune_client.py  onchain_client.py  seed_data.py  vp_api_client.py
backend/app/ingestion/: __init__.py  chain_events.py
backend/app/models/: __init__.py
backend/app/processing/: __init__.py  surge_engine.py
backend/tests/: __init__.py  test_acp_client.py
docs/: ARCHITECTURE.md
execution/: sniper.py
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/components/: SurgeAlertPanel.tsx  TokenUniverseTable.tsx
frontend/lib/: api.ts
scripts/: seed_demo_data.py  setup.sh
shared/: types.py
