[project]
name = "virtuals-surge-sniper"
version = "0.1.0"
description = "Virtuals Protocol intelligence dashboard + surge sniper execution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "redis>=5.2",
    "pydantic>=2.10",
    "web3>=6.20",
    "dune-client>=1.8",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
